...
                        )
                    }
                },
                modifier =
                    Modifier.fillMaxWidth()
                        .focusRequester(focusRequester)
                        .testTag("e2e-server-url"),
            )
            LoadingButton(
                text = stringResource(SetupR.string.add_server_btn_connect),
                onClick = { doConnect() },
                isLoading = state.isLoading,
                modifier = Modifier.fillMaxWidth().testTag("e2e-connect-button"),
            )
        }
        IconButton(
            onClick = { onAction(AddServerAction.OnBackClick) },
            modifier = Modifier.padding(start = 8.dp),
        ) {
...
