...
   <string name="servers">Servers</string>
   <string name="servers_no_servers">No servers found</string>
   <string name="servers_btn_add_server">Add server</string>
   <string name="remove_server_dialog">Remove server</string>
   <string name="remove_server_dialog_text">Are you sure you want to remove the server %s?</string>
   <string name="welcome">Welcome to JollyFin</string>
   <string name="welcome_btn_continue">Continue</string>
   <string name="welcome_btn_learn_more">Learn more about Jellyfin</string>
   <string name="welcome_btn_restore">Restore from backup</string>
   <string name="welcome_btn_scan_qr">Scan QR code</string>
   <string name="welcome_text">JollyFin is a third-party client for Jellyfin. JollyFin by itself does not contain any media.\n\nIn order to use this client, you need to host your own Jellyfin server.</string>
   <string name="confirm">Confirm</string>
   <string name="cancel">Cancel</string>
...
